Refatoração do projeto